--- a/website/src/data/components/treemap/meta.yml
+++ b/website/src/data/components/treemap/meta.yml
@@ -27,12 +27,12 @@ TreeMap:
 
     The responsive alternative of this component is `ResponsiveTreeMap`,
     it also offers other implementations, see
-    [TreeMapHtml](self:/treemap/html) and
-    [TreeMapCanvas](self:/treemap/canvas).
+    [TreeMapHtml](self:/treemap/html/) and
+    [TreeMapCanvas](self:/treemap/canvas/).
 
     The `TreeMap` component is also available in the `@nivo/api`,
     see [sample](api:/samples/treemap)
-    or [try it using the API client](self:/treemap/api).
+    or [try it using the API client](self:/treemap/api/).
 
 TreeMapHtml:
   package: '@nivo/treemap'
@@ -53,8 +53,8 @@ TreeMapHtml:
 
     The responsive alternative of this component is
     `ResponsiveTreeMapHtml`, it also offers other
-    implementations, see [TreeMap](self:/treemap) and
-    [TreeMapCanvas](self:/treemap/canvas).
+    implementations, see [TreeMap](self:/treemap/) and
+    [TreeMapCanvas](self:/treemap/canvas/).
 
 TreeMapCanvas:
   package: '@nivo/treemap'
@@ -63,11 +63,11 @@ TreeMapCanvas:
     - canvas
   stories: []
   description: |
-    A variation around the [TreeMap](self:/treemap) component.
+    A variation around the [TreeMap](self:/treemap/) component.
     Well suited for large data sets as it does not impact DOM tree depth,
     however you'll lose the isomorphic ability and transitions.
 
     The responsive alternative of this component is
     `ResponsiveTreeMapCanvas`, it also offers other implementations,
-    see [TreeMap](self:/treemap) and
-    [TreeMapHtml](self:/treemap/html).
+    see [TreeMap](self:/treemap/) and
+    [TreeMapHtml](self:/treemap/html/).
