--- a/api/package.json
+++ b/api/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "@nivo/bar": "0.59.2",
     "@nivo/bullet": "0.59.2",
+    "@nivo/brush": "0.59.0",
     "@nivo/calendar": "0.59.1",
     "@nivo/chord": "0.59.1",
     "@nivo/circle-packing": "0.59.1",
