--- a/packages/line/package.json
+++ b/packages/line/package.json
@@ -35,6 +35,7 @@
     "d3-format": "^1.3.2",
     "d3-scale": "^2.1.2",
     "d3-shape": "^1.3.5",
+    "d3-brush": "1.1.3",
     "lodash": "^4.17.11",
     "react-motion": "^0.5.2",
     "recompose": "^0.26.0"
